--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+
+spring.liquibase.change-log=classpath:/db/changelog-master.xml
